--- a/PetTrack.Core/PetTrack.Core.csproj
+++ b/PetTrack.Core/PetTrack.Core.csproj
@@ -17,6 +17,7 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="8.0.0" />
 	</ItemGroup>
 
 </Project>
