--- a/PetTrack.Services/PetTrack.Services.csproj
+++ b/PetTrack.Services/PetTrack.Services.csproj
@@ -8,6 +8,7 @@
 
 
 	<ItemGroup>
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
 		<PackageReference Include="FirebaseAdmin" Version="3.0.0" />
 		<PackageReference Include="Google.Apis.Auth" Version="1.69.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
