--- a/PetTrack/PetTrack.csproj
+++ b/PetTrack/PetTrack.csproj
@@ -5,7 +5,9 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
 	<GenerateDocumentationFile>true</GenerateDocumentationFile>
-	<NoWarn>1591</NoWarn>	  
+	<NoWarn>1591</NoWarn>
+	<UserSecretsId>0fee793d-f8ab-4008-ab14-d4a4e0a44dec</UserSecretsId>
+	<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>	  
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,6 +18,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
