--- a/PetTrack.ModelViews/PetTrack.ModelViews.csproj
+++ b/PetTrack.ModelViews/PetTrack.ModelViews.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.9.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PetTrack.Contract.Repositories\PetTrack.Contract.Repositories.csproj" />
     <ProjectReference Include="..\PetTrack.Core\PetTrack.Core.csproj" />
     <ProjectReference Include="..\PetTrack.Repositories\PetTrack.Repositories.csproj" />
