--- a/PetTrack/appsettings.json
+++ b/PetTrack/appsettings.json
@@ -8,7 +8,7 @@
 
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-RFIFVIS4\\MSSQLSERVER01;Database=PetTrack;User Id=sa;Password=12345;TrustServerCertificate=True;Encrypt=True;"
+    "DefaultConnection": "server=switchback.proxy.rlwy.net;port=36444;database=railway;user=root;password=FEJKoVhdbBNsEnYaeWnmuxqUWLfcNYlw;"
   },
 
   "JwtSettings": {
