--- a/PetTrack/appsettings.json
+++ b/PetTrack/appsettings.json
@@ -8,9 +8,8 @@
 
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-RFIFVIS4\\MSSQLSERVER01;Database=PetTrack;User Id=sa;Password=12345;TrustServerCertificate=True;Encrypt=True;"
+    "DefaultConnection": "Host=dpg-d1l0dkur433s73d43qkg-a.singapore-postgres.render.com;Port=5432;Database=pettrack;Username=taiha;Password=pGRb0Vt1Ki73zOhyBXfENMMmYba0r9S1;Ssl Mode=Require;Trust Server Certificate=true"
   },
-
   "JwtSettings": {
     "Issuer": "PetTrack",
     "Audience": "PetTrack",
