--- a/PetTrack.Core/PetTrack.Core.csproj
+++ b/PetTrack.Core/PetTrack.Core.csproj
@@ -16,9 +16,9 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
 		<PackageReference Include="payOS" Version="1.0.9" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="8.0.0" />
 	</ItemGroup>
