--- a/PetTrack.ModelViews/PetTrack.ModelViews.csproj
+++ b/PetTrack.ModelViews/PetTrack.ModelViews.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
